# formuhalal

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  llm.py
data/: FoodSubstances_clean.csv
data/raw/: FoodSubstances.csv
etl_pipeline/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run-etl.sh
etl_pipeline/src/: crawler.py  fda_processor.py  load_db.py  run.py
frontend/: .dockerignore  Dockerfile  about.html  build.mjs  dev.py  formulation.html  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
frontend/src/: app.py
frontend/src/templates/: about.html  formulation.html  index.html  privacy.html  terms.html
frontend/styles/: input.css
scripts/: format-python.sh
