[project]
name = "frontend"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "fastapi==0.136.3",
    "jinja2==3.1.6",
    "python-dotenv==1.2.2",
    "uvicorn==0.47.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.15",
]

[tool.uv]
required-version = "==0.8.24"

[tool.ruff]
line-length = 120
target-version = "py314"